k8-ingress/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-service
spec:
  selector:
    app: nginx-ingress-pods
  ports:
  - port: 8080
    targetPort: 80
