k8-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  labels:
    name: nginx-ingress
spec:
  rules:
  - host: nginx-ingress.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: nginx-ingress-service
            port: 
              number: 8080
